quick fix for the code blocks on mobile

--- a/_sass/monokai.scss
+++ b/_sass/monokai.scss
@@ -1,4 +1,4 @@
-.highlight pre { background-color: #272822; }
+.highlight pre { background-color: #272822; white-space: pre-wrap; }
 .highlight .hll { background-color: #9aad3b; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
